cmake_minimum_required(VERSION 3.28)
project(lc)

set(CMAKE_CXX_STANDARD 20)

add_executable(lc main.cpp)

add_executable(2065-maximum-path-quality-of-a-graph leetcode/editor/cn/2065-maximum-path-quality-of-a-graph.cpp)
add_executable(1-two-sum leetcode/editor/cn/1-two-sum.cpp)
add_executable(2-add-two-numbers leetcode/editor/cn/2-add-two-numbers.cpp)
add_executable(3115-maximum-prime-difference leetcode/editor/cn/3115-maximum-prime-difference.cpp)