cmake_minimum_required(VERSION 3.28)
project(lc)

set(CMAKE_CXX_STANDARD 20)

add_executable(lc main.cpp)

add_executable(2065-maximum-path-quality-of-a-graph leetcode/editor/cn/2065-maximum-path-quality-of-a-graph.cpp)
add_executable(1-two-sum leetcode/editor/cn/1-two-sum.cpp)
add_executable(2-add-two-numbers leetcode/editor/cn/2-add-two-numbers.cpp)
add_executable(3115-maximum-prime-difference leetcode/editor/cn/3115-maximum-prime-difference.cpp)
add_executable(3099-harshad-number leetcode/editor/cn/3099-harshad-number.cpp)
add_executable(3-longest-substring-without-repeating-characters leetcode/editor/cn/3-longest-substring-without-repeating-characters.cpp)
add_executable(3203-find-minimum-diameter-after-merging-two-trees leetcode/editor/cn/3203-find-minimum-diameter-after-merging-two-trees.cpp)
add_executable(3086-minimum-moves-to-pick-k-ones leetcode/editor/cn/3086-minimum-moves-to-pick-k-ones.cpp)
add_executable(4-median-of-two-sorted-arrays leetcode/editor/cn/4-median-of-two-sorted-arrays.cpp)
add_executable(724-find-pivot-index leetcode/editor/cn/724-find-pivot-index.cpp)
add_executable(5-longest-palindromic-substring leetcode/editor/cn/5-longest-palindromic-substring.cpp)
add_executable(3102-minimize-manhattan-distances leetcode/editor/cn/3102-minimize-manhattan-distances.cpp)
add_executable(2970-count-the-number-of-incremovable-subarrays-i leetcode/editor/cn/2970-count-the-number-of-incremovable-subarrays-i.cpp)
add_executable(10-regular-expression-matching leetcode/editor/cn/10-regular-expression-matching.cpp)
add_executable(1456-maximum-number-of-vowels-in-a-substring-of-given-length leetcode/editor/cn/1456-maximum-number-of-vowels-in-a-substring-of-given-length.cpp)
add_executable(2269-find-the-k-beauty-of-a-number leetcode/editor/cn/2269-find-the-k-beauty-of-a-number.cpp)
add_executable(2974-minimum-number-game leetcode/editor/cn/2974-minimum-number-game.cpp)
add_executable(11-container-with-most-water leetcode/editor/cn/11-container-with-most-water.cpp)
add_executable(721-accounts-merge leetcode/editor/cn/721-accounts-merge.cpp)
add_executable(2956-find-common-elements-between-two-arrays leetcode/editor/cn/2956-find-common-elements-between-two-arrays.cpp)
add_executable(15-3sum leetcode/editor/cn/15-3sum.cpp)
add_executable(2959-number-of-possible-sets-of-closing-branches leetcode/editor/cn/2959-number-of-possible-sets-of-closing-branches.cpp)
add_executable(17-letter-combinations-of-a-phone-number leetcode/editor/cn/17-letter-combinations-of-a-phone-number.cpp)